<resources>
    <string name="app_name">DragonflyLabs Library Sample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_fruit">FruitActivity</string>
    <string name="menu_about">About</string>
    <string name="menu_fork">Fork</string>
    <string name="menu_contribution">Contribution</string>
    <string name="menu_recyclers">Refresh Recyclers</string>
    <string name="menu_forms">Fly Forms</string>
    <string name="menu_camera">Camera Utils</string>
    <string name="menu_prefs">Single Preferences</string>
    <string name="contributor">Daniel García Alvarado</string>
    <string name="contributor_link">http://github.com/danigarciaalva</string>
    <string name="take_photo">Take photo</string>
    <string name="import_photo">Import photo</string>
    <string name="no_data">Empty data</string>
    <string name="import_photo_or_video">IMPORTAR FOTO O VIDEO®</string>
    <string name="content_description">Content description!</string>
    <string name="partial_injury_injured">sdfsd</string>
    <string name="partial_injury_death">sdfsdfds</string>
    <string name="partial_injury_parts">sdfsdfsd</string>
    <string name="partial_injury_add_part">dfsdf</string>
    <string name="partial_injury_ambulance">sdfsdfs</string>
    <string name="partial_injury_other_place">sdfsdf</string>
    <string name="partial_injury_other_place_text">sdfsdfsd</string>
    <string name="test_date">Date do not equal or after date system</string>
</resources>
