<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recyclers"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:title="@string/menu_recyclers"/>
        <item
            android:id="@+id/nav_forms"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_forms"/>
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_camera"/>
        <item
            android:id="@+id/nav_prefs"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_prefs"/>
    </group>

    <item android:title="@string/menu_about">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/menu_fork"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/menu_contribution"/>
        </menu>
    </item>

</menu>